[package]
name = "custos-macro"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A macro crate for custos."
repository = "https://github.com/elftausend/custos-macro"
keywords = ["macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version="2.0", features=["full"]}
quote = "1.0"